# WaterWise

./: .gitignore  README.md
.github/: CI.yml
.github/workflows/: CI.yml
backend/: Cargo.toml
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs
