[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
common = { version = "0.1.0", path = "../common" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
wasm-bindgen = "0.2.84"
yew = "0.20.0"
yew-router = "0.17.0"
